Arreglo de bugs en la interfaz del usuario y pequeñas modificaciones en las toasts para el metodo de editar rides

--- a/dashboard.html
+++ b/dashboard.html
@@ -62,10 +62,10 @@
         </ul>
 
         <div class="container">
+            <h2 class="header center">Mis Rides</h2>
+            <a class="btn btn-small waves-effect green" href="./rides.html"><i class="material-icons left">add</i>Añadir</a>
             <div class="section white">
-                <h2 class="header center">Mis Rides</h2>
-                <a class="btn waves-effect green btn-small right" href="./rides.html"><i class="material-icons left">add</i>Añadir</a>
-                <table class="table highlight centered">
+                <table class="table highlight responsive-table col s12">
                     <thead>
                         <tr>
                             <th>Usuario</th>
@@ -74,7 +74,7 @@
                             <th>Hora de salida</th>
                             <th>Hora de llegada</th>
                             <th>Editar</th>
-                            <th>Eliminar</th>
+                            <th>Eliminar</th> 
                         </tr>
                     </thead>
                     <tbody id="rides_table">
