Eliminacion de basura

--- a/setting.html
+++ b/setting.html
@@ -9,12 +9,10 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./css/icon.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./css/materialize.min.css">
-    
+
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -85,7 +83,8 @@
                             </div>
                         </div>
                         <button type="reset" class="btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
-                        <button type="button" name="btn_setting" id="btn_setting" class='btn btn-long waves-effect green'><i class="material-icons left">save</i>Actualizar</button>
+                        <button type="button" name="btn_setting" id="btn_setting" class='btn btn-long waves-effect green'><i
+                                class="material-icons left">save</i>Actualizar</button>
                     </form>
                 </div>
             </div>
@@ -119,11 +118,9 @@
 
     <!-- Compiled and minified JavaScript jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
