--- a/login.html
+++ b/login.html
@@ -9,12 +9,10 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./css/icon.css">
 
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./css/materialize.min.css">
-    
+
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
@@ -56,7 +54,8 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input class="validate" type="text" name="usernameLogin" id="usernameLogin" required />
+                                    <input class="validate" type="text" name="usernameLogin" id="usernameLogin"
+                                        required />
                                     <label for="user">Usuario</label>
                                     <div class="left" id="alert-usernameLogin"></div>
                                 </div>
@@ -64,7 +63,8 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input class="validate" type="password" name="passwdLogin" id="passwdLogin" required />
+                                    <input class="validate" type="password" name="passwdLogin" id="passwdLogin"
+                                        required />
                                     <label for="password">Contraseña</label>
                                     <div class="left" id="alert-passwdLogin"></div>
                                 </div>
@@ -110,11 +110,9 @@
     </div>
     <!-- Compiled and minified JavaScript jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
