--- a/signin.html
+++ b/signin.html
@@ -1,138 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
 
     <!-- My styles CSS -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <title>Página principal</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container-fluid">
-        <nav class="black">
-            <div class="nav-wrapper">
-                <a href="./index.html" class="brand-logo position-logo">
-                    <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
-                            class="white-text">oRi</span><span class="red-text">des</span>
-                        <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png" width="25px">
-                    </p>
-                </a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="./login.html">Iniciar Session</a></li>
-                    <li><a href="./signin.html">Crear cuenta</a></li>
-                </ul>
-            </div>
-        </nav>
-        <ul class="sidenav" id="mobile-demo">
+      <nav class="black">
+        <div class="nav-wrapper">
+          <a href="./index.php" class="brand-logo position-logo">
+            <p style="font-size: 20px; margin: 0px; padding: 0px">
+              <span class="indigo-text center">Tic</span
+              ><span class="white-text">oRi</span
+              ><span class="red-text">des</span>
+              <img
+                src="./img/costa-rica-890669_960_720.png"
+                alt="./img/costa-rica-890669_960_720.png"
+                width="25px"
+              />
+            </p>
+          </a>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+          <ul class="right hide-on-med-and-down">
             <li><a href="./login.html">Iniciar Session</a></li>
             <li><a href="./signin.html">Crear cuenta</a></li>
-        </ul>
-        <main class="section-signin">
-            <center>
-                <div class="container">
-                    <div class="z-depth-1 form-style">
-
-                        <form method="post" id="form" name="form" class="col s6">
-                            <div class="row">
-                                <div class="col s12">
-                                    <h5 class="indigo-text">Crear Cuenta</h5>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class='input-field col s12'>
-                                    <input class="validate" type="text" name="name" id="name" />
-                                    <label for="name">Nombre</label>
-                                    <div class="left" id="alert-name"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input class="validate" type="text" name="lastname" id="lastname" />
-                                    <label for="lastname">Apellido</label>
-                                    <div class="left" id="alert-lastname"></div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input class="validate" type="text" name="phone" id="phone" minlength="1" maxlength="8" />
-                                    <label for="phone">Telefono</label>
-                                    <div class="left" id="alert-phone"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input class="validate" type="text" name="username" id="username" />
-                                    <label for="username">Nombre de usuario</label>
-                                    <div class="left" id="alert-username"></div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input class="validate" type="password" name="passwd" id="passwd" />
-                                    <label for="passwd">Contraseña</label>
-                                    <div class="left" id="alert-passwd"></div>
-                                </div>
-                            </div>
-                            <div class='row'>
-                                <div class='input-field col s12'>
-                                    <input class='validate' type='password' name='passwd-repeat' id='passwd-repeat' />
-                                    <label for='passwd-repeat'>Repetir Contraseña</label>
-                                    <div class="left" id="alert-repeatpasswd"></div>
-                                </div>
-                                <label class="label">
-                                    <p>¿ya tienes una cuenta?, inicia session <a class='blue-text' href='./login.html'><b>aquí</b></a>.</p>
-                                </label>
-                            </div>
-
-                            <br />
-                            <div class='row'>
-                                <button type='button' name='btn_register' id="btn_register" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </center>
-        </main>
-        <footer class="page-footer black">
-            <div class="container">
+          </ul>
+        </div>
+      </nav>
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="./login.html">Iniciar Session</a></li>
+        <li><a href="./signin.html">Crear cuenta</a></li>
+      </ul>
+      <main class="section-signin">
+        <center>
+          <div class="container">
+            <div class="z-depth-1 form-style">
+              <form method="post" id="form" name="form" class="col s6">
                 <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">TicoRides</h5>
-                        <p class="grey-text text-lighten-4">Con esta aplicación podras encontrar personas que viajan a
-                            tu destino, además podras saber información sobre el conductor y el auto, todo en una sola
-                            app.</p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <div class="right">
-                            <h2 style="font-size:20px;"><span class="indigo-text center">Tic</span><span class="white-text">oRi</span><span
-                                    class="red-text">des</span></h2>
-                            <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png"
-                                width="50px">
-                        </div>
-                    </div>
+                  <div class="col s12">
+                    <h5 class="indigo-text">Crear Cuenta</h5>
+                  </div>
                 </div>
-            </div>
-            <div class="footer-copyright center">
-                <div class="container">
-                    © 2018 Copyright TicoRides
+
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input class="validate" type="text" name="name" id="name" />
+                    <label for="name">Nombre</label>
+                    <div class="left" id="alert-name"></div>
+                  </div>
                 </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input
+                      class="validate"
+                      type="text"
+                      name="lastname"
+                      id="lastname"
+                    />
+                    <label for="lastname">Apellido</label>
+                    <div class="left" id="alert-lastname"></div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input
+                      class="validate"
+                      type="text"
+                      name="phone"
+                      id="phone"
+                      minlength="1"
+                      maxlength="8"
+                    />
+                    <label for="phone">Telefono</label>
+                    <div class="left" id="alert-phone"></div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input
+                      class="validate"
+                      type="text"
+                      name="username"
+                      id="username"
+                    />
+                    <label for="username">Nombre de usuario</label>
+                    <div class="left" id="alert-username"></div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input
+                      class="validate"
+                      type="password"
+                      name="passwd"
+                      id="passwd"
+                    />
+                    <label for="passwd">Contraseña</label>
+                    <div class="left" id="alert-passwd"></div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="input-field col s12">
+                    <input
+                      class="validate"
+                      type="password"
+                      name="passwd-repeat"
+                      id="passwd-repeat"
+                    />
+                    <label for="passwd-repeat">Repetir Contraseña</label>
+                    <div class="left" id="alert-repeatpasswd"></div>
+                  </div>
+                  <label class="label">
+                    <p>
+                      ¿ya tienes una cuenta?, inicia session
+                      <a class="blue-text" href="./login.html"><b>aquí</b></a
+                      >.
+                    </p>
+                  </label>
+                </div>
+
+                <br />
+                <div class="row">
+                  <button
+                    type="button"
+                    name="btn_register"
+                    id="btn_register"
+                    class="col s12 btn btn-large waves-effect blue"
+                  >
+                    Registrarme
+                  </button>
+                </div>
+              </form>
             </div>
-        </footer>
+          </div>
+        </center>
+      </main>
+      <footer class="page-footer black">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12">
+              <h5 class="white-text">TicoRides</h5>
+              <p class="grey-text text-lighten-4">
+                Con esta aplicación podras encontrar personas que viajan a tu
+                destino, además podras saber información sobre el conductor y el
+                auto, todo en una sola app.
+              </p>
+            </div>
+            <div class="col l4 offset-l2 s12">
+              <div class="right">
+                <h2 style="font-size: 20px">
+                  <span class="indigo-text center">Tic</span
+                  ><span class="white-text">oRi</span
+                  ><span class="red-text">des</span>
+                </h2>
+                <img
+                  src="./img/costa-rica-890669_960_720.png"
+                  alt="./img/costa-rica-890669_960_720.png"
+                  width="50px"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright center">
+          <div class="container">© 2018 Copyright TicoRides</div>
+        </div>
+      </footer>
     </div>
 
     <!-- Compiled and minified JavaScript jquery -->
@@ -150,6 +206,5 @@
     <script src="./js/app.js"></script>
     <script src="./js/validation.js"></script>
     <script src="./js/bindevent.js"></script>
-</body>
-
+  </body>
 </html>
