Se agrego readme y se cambio de formato php a html

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
     <div class="container-fluid">
       <nav class="black">
         <div class="nav-wrapper">
-          <a href="./index.php" class="brand-logo position-logo">
+          <a href="./index.html" class="brand-logo position-logo">
             <p style="font-size: 20px; margin: 0px; padding: 0px">
               <span class="indigo-text center">Tic</span
               ><span class="white-text">oRi</span
